# uefi-rust

./: Cargo.toml  LICENSE-MIT  README.md
examples/: minimal.rs  output_str.rs
uefi/: Cargo.toml
uefi-sys/: Cargo.toml
uefi-sys/src/: boot_services.rs  configuration_table.rs  console.rs  lib.rs  macros.rs  runtime_services.rs  system_table.rs  types.rs
uefi/src/: allocator.rs  boot_services.rs  console.rs  lib.rs  protocol.rs  system_table.rs  types.rs  utf16.rs
